--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "mkdir -p dist/public && cp -r client/public/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
     "start": "node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx server/db/migrate.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -53,6 +56,7 @@
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
