--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "mkdir -p dist/public && cp -r client/public/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
+    "build": "vite build && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
     "start": "node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
