--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.6",
+    "terser": "^5.36.0",
     "typescript": "5.6.3"
   },
   "optionalDependencies": {
