--- a/package.json
+++ b/package.json
@@ -6,12 +6,29 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
+    "build:analyze": "vite build --mode=analyze",
     "start": "node dist/index.js",
     "check": "tsc",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:run": "vitest run",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "audit:security": "npm audit --audit-level=moderate",
+    "audit:fix": "npm audit fix",
+    "bundle:analyze": "npx vite-bundle-analyzer",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx server/db/migrate.ts",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "deploy:staging": "npm run build && npm run db:migrate",
+    "deploy:production": "npm run audit:security && npm run test:run && npm run build && npm run db:migrate",
+    "health:check": "curl -f http://localhost:5000/api/health || exit 1",
+    "monitor": "node scripts/monitor.js",
+    "backup": "node scripts/backup.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,6 +61,8 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
+    "@sentry/node": "^9.38.0",
+    "@sentry/react": "^9.38.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.2",
@@ -57,15 +76,18 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.18.2",
     "google-auth-library": "^10.1.0",
+    "helmet": "^8.1.0",
     "i18next": "^25.2.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
@@ -99,6 +121,7 @@
     "vaul": "^1.1.2",
     "vite": "^5.4.19",
     "web-push": "^3.6.7",
+    "web-vitals": "^5.0.3",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -108,8 +131,12 @@
     "@replit/vite-plugin-cartographer": "^0.2.7",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/vite": "^4.1.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
@@ -122,8 +149,10 @@
     "@types/ws": "^8.5.13",
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.6",
+    "jsdom": "^26.1.0",
     "terser": "^5.36.0",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "^3.2.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
