--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "build:analyze": "vite build --mode=analyze",
     "start": "node dist/index.js",
     "check": "tsc",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "test:run": "vitest run",
+
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write .",
@@ -25,14 +22,12 @@
     "db:migrate": "tsx server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "deploy:staging": "npm run build && npm run db:migrate",
-    "deploy:production": "npm run audit:security && npm run test:run && npm run build && npm run db:migrate",
-    "health:check": "curl -f http://localhost:5000/api/health || exit 1",
-    "monitor": "node scripts/monitor.js",
-    "backup": "node scripts/backup.js"
+    "deploy:production": "npm run audit:security && npm run build && npm run db:migrate",
+    "health:check": "curl -f http://localhost:5000/api/health || exit 1"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@jridgewell/trace-mapping": "^0.3.25",
+
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -63,8 +58,7 @@
     "@react-oauth/google": "^0.12.2",
     "@sentry/node": "^9.38.0",
     "@sentry/react": "^9.38.0",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.4.0",
+
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.60.5",
     "@types/jsonwebtoken": "^9.0.10",
@@ -74,7 +68,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "connect-pg-simple": "^10.0.0",
+
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -92,15 +86,14 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
+
     "multer": "^2.0.1",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "node-cron": "^4.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "openai": "^5.8.2",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
+
     "pg": "^8.16.3",
     "postcss": "^8.4.47",
     "postgres": "^3.4.7",
@@ -109,21 +102,21 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.5.3",
-    "react-icons": "^5.4.0",
+
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
-    "stripe": "^18.2.1",
+
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "tw-animate-css": "^1.2.5",
+
     "vaul": "^1.1.2",
     "vite": "^5.4.19",
     "web-push": "^3.6.7",
     "web-vitals": "^5.0.3",
     "wouter": "^3.3.5",
-    "ws": "^8.18.0",
+
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
@@ -134,27 +127,24 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/connect-pg-simple": "^7.0.3",
+
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
     "@types/node-telegram-bot-api": "^0.64.9",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
+
     "@types/pg": "^8.15.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
+
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.6",
     "jsdom": "^26.1.0",
     "terser": "^5.36.0",
     "typescript": "5.6.3",
     "vitest": "^3.2.4"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.8"
   }
+
 }
