--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
-    "build:analyze": "vite build --mode=analyze",
+    "dev": "cd client && vite",
+    "build": "cd client && vite build && cd .. && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
+    "build:analyze": "cd client && vite build --mode=analyze",
     "start": "node dist/index.js",
     "check": "tsc",
 
