--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cd client && vite",
-    "build": "cd client && vite build && cd .. && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
+    "build": "cd client && vite build && cd .. && rm -rf dist/public && mkdir -p dist/public && cp -r client/dist/* dist/public/ && esbuild server/index.ts --bundle --platform=node --format=esm --packages=external --outdir=dist",
     "build:analyze": "cd client && vite build --mode=analyze",
     "start": "node dist/index.js",
     "check": "tsc",
