--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,5 @@ services:
         value: production
       - key: PORT
         value: 10000
-    healthCheckPath: /api/health 
+    healthCheckPath: /api/health
+    autoDeploy: true 
