--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.15.1",
+    "@types/node": "^20.14.8",
     "@types/node-telegram-bot-api": "^0.64.9",
 
     "@types/pg": "^8.15.4",
