feat: добавить WEBHOOK_SECRET в render.yaml для безопасности Telegram webhook

--- a/render.yaml
+++ b/render.yaml
@@ -12,5 +12,7 @@ services:
         value: 10000
       - key: GOOGLE_CLIENT_ID
         sync: false
+      - key: WEBHOOK_SECRET
+        sync: false
     healthCheckPath: /api/health
     autoDeploy: true 
